--- a/templates/content.html
+++ b/templates/content.html
@@ -19,17 +19,50 @@
             <div class="container">
                 <div class="table-wrapper">
                 <table class="table table-striped table-hover">
-                    <tr>
-                        <td><a href="/tick/{{task.id}}">Tick</a></td>
-                        <td>{{task.itemdesc}}</td>
-                        <td><a href="/edit/{{task.id}}">Edit</a></td>
-                        <td><a href="/delete/{{task.id}}">Delete</a></td>
-                    </tr>
+                    
+                    {% if cross == 100 %}
+                        <tr>
+                            <td><a href="/untick/{{task.id}}">Revert</a></td>
+                            <td class="cross">{{task.itemdesc}}</td>
+                            <td><a href="/edit/{{task.id}}">Edit</a></td>
+                            <td><a href="/delete/{{task.id}}">Delete</a></td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td><a href="/tick/{{task.id}}">Done</a></td>
+                            <td>{{task.itemdesc}}</td>
+                            <td><a href="/edit/{{task.id}}">Edit</a></td>
+                            <td><a href="/delete/{{task.id}}">Delete</a></td>
+                        </tr>
+                    {% endif %}
+
                 </table>
                 </div>
             </div>
             {% endfor %}
-    </form>
+    <!--/form-->
 </div> 
 
+            <!-- Trigger the modal with a button -->
+            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Edit your item...</h4>
+                </div>
+                <div class="modal-body">
+                    <input class="form-control col-8" type="text" name="useritem">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Update</button>
+                </div>
+                </div>
+
+            </div>
+            </div>
+</form>
 {% endblock %}
